--- a/Statystyki_opisowe_szereg_prosty.ipynb
+++ b/Statystyki_opisowe_szereg_prosty.ipynb
@@ -393,6 +393,49 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Prawostronnie skośny bo skweness > 0"
+      ],
+      "metadata": {
+        "id": "YhDDmo0fY5-5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "efficiency_df['efficiency_diff_power_4'] = efficiency_df['efficiency_diff']**4\n",
+        "kurtosis = efficiency_df['efficiency_diff_power_4'].sum() / (len(efficiency_df['efficiency']) * std**4)\n",
+        "print(kurtosis)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GcJsPuPeZA25",
+        "outputId": "9916313d-dd5d-4929-e728-e245069e77ef"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.209048132536025\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kurtoza mniejsza od 3 więc wykres jest spłaszczony"
+      ],
+      "metadata": {
+        "id": "cxRreRIpZiqH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Zadanie 2.\n",
         "W ramach badania form spędzania czasu wolnego przez uczniów szkół średnich  pytano, między innymi, o czas poświęcany tygodniowo na oglądanie programu telewizyjnego. Dla ankietowanej grupy uczniów jednego z poznańskich liceów uzyskano we wrześniu 2022 roku dane podane w ramce tv_hours_df.\n",
         "1. Zapisz co w tym zadaniu stanowi zbiorowość statystyczną, co jest jednostką a co cechą statystyczną.\n",
