--- a/Statystyki_opisowe_szereg_przedziałowy.ipynb
+++ b/Statystyki_opisowe_szereg_przedziałowy.ipynb
@@ -63,25 +63,10 @@
         "surface_avg = sum(surface_df['number_of_flats']*surface_df['interval_center'])/surface_df['number_of_flats'].sum()"
       ],
       "metadata": {
-        "id": "WT4rbs8CmS_T",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "85beff6e-8c3d-4adf-cdc2-c3385c74df71"
+        "id": "WT4rbs8CmS_T"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "np.float64(60.3125)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -97,9 +82,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSnkID2woTXa",
-        "outputId": "42e2d9c2-a6e1-4f62-c086-debf74abd3d2"
+        "outputId": "b1eab102-bbc6-4004-d095-3d2ed104c7a8"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,7 +94,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
@@ -124,7 +109,65 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lUhoyL08pmi6",
-        "outputId": "e6673fbb-7b95-4021-c681-b168d39dcace"
+        "outputId": "d3be992d-fbf0-4a50-b2db-28beb4db7cec"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(0.2568088078296642)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#skosnosc\n",
+        "surface_df['surface_diff_power3'] = surface_df['surface_diff']**3\n",
+        "skewness = sum(surface_df['surface_diff_power3']*surface_df['number_of_flats'])/surface_df['number_of_flats'].sum()/surface_std**3\n",
+        "skewness\n"
+      ],
+      "metadata": {
+        "id": "lWgnLg_oLGZL",
+        "outputId": "a8db8b8e-ff52-4a4a-b14d-682be44ff101",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(0.3553407991114152)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#kurtoza\n",
+        "surface_df['surface_diff_power4'] = surface_df['surface_diff']**4\n",
+        "kurtosis = sum(surface_df['surface_diff_power4']*surface_df['number_of_flats'])/surface_df['number_of_flats'].sum()/surface_std**4\n",
+        "kurtosis"
+      ],
+      "metadata": {
+        "id": "iFJcnANjLvHM",
+        "outputId": "e921c744-d788-42f1-b9af-7c9796538584",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": 7,
       "outputs": [
@@ -132,7 +175,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "np.float64(0.2568088078296642)"
+              "np.float64(2.555620244643129)"
             ]
           },
           "metadata": {},
